# rchat

./: Cargo.toml  README.md
lib/client/: Cargo.toml
lib/client/src/: handlers.rs  lib.rs
lib/parser/: Cargo.toml
lib/parser/src/: lib.rs  message.rs
lib/server/: Cargo.toml
lib/server/src/: client.rs  lib.rs
src/: args.rs  lib.rs  main.rs  parser.rs
src/client/: handler.rs  handlers.rs  mod.rs
src/server/: connection.rs  handler.rs  mod.rs
