[package]
name = "rchat"
version = "0.1.0"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ctrlc]
version = "3.0"
features = ["termination"]

[dependencies.x25519-dalek]
version = "0.6"
